# zenith

./: Cargo.toml  fast.txt  slow.txt
assets/: .gitattributes  .gitignore  test.scn.ron  tuneable.consts.ron
assets/cutscenes/: hot.walk2work.ron
assets/editor/: hot.editor_help.ron
assets/levels/: L1.zenith  L2.zenith  L3.zenith  basic.level.ron  basic_1.level.ron  basic_2.level.ron  cbasic_2.level.ron  cspringy_1.level.ron  cspringy_2.level.ron  editing.level.ron  editing.zenith  export.level.ron  name.level.ron  springy_1.level.ron  springy_2.level.ron
assets/menus/: constellation_screen.ron  main_menu.ron  title_screen.ron
assets/saves/: A.progress.ron  B.progress.ron
assets/shaders/: animated_mat.wgsl  animation_mat.wgsl  dummy.wgsl  post_processing.wgsl  reduce.wgsl  sprite_mat.wgsl  sunrise_mat.wgsl
assets/sound_effects/: DrySnowSteps.7z  WetSnowSteps.7z
assets/sprites/: arrow_body.aseprite  arrow_bodyL.aseprite  arrow_head.aseprite  arrow_headL.aseprite  doctor.aseprite  narf.aseprite  narf_limp.aseprite  replenish.aseprite  replenishL.aseprite  replenish_explode.aseprite  replenish_explodeL.aseprite  ship.aseprite  shipL copy.aseprite  shipL_explosion.aseprite
assets/textures/: play_inner.aseprite  play_outer.aseprite  trash.aseprite
devlog/: 3_31_24.md
devlog/4_9/: 3_31_24.md
devlog/6_20/: 6_20_24.md
src/: camera.rs  drawing.rs  input.rs  main.rs  math.rs  music.rs  ship.rs  uid.rs
src/cutscenes/: mod.rs
src/drawing/: animated.rs  animation.rs  animation_mat.rs  bordered_mesh.rs  effects.rs  hollow.rs  layering.rs  light.rs  mesh.rs  (+11 more)
(+153 files in other folders)
