[package]
name = "zenith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["file_watcher"] }
bevy-inspector-egui = "0.23.4"
bevy_common_assets = { version = "0.10.0", features = ["ron"] }
earcutr = "0.4.3"
env_logger = "0.11.2"
linreg = "0.2.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
